filter method understand

--- a/loops-and-its-types/index.html
+++ b/loops-and-its-types/index.html
@@ -8,7 +8,9 @@
     <script src="apps.js"></script>
 </head>
 <body>
-
+<!-- <input type="search" name="" id="search"> -->
+<!-- <button onClick="GetSearchedValue()">Get value</button> -->
+<!-- <div id="value"></div> --> 
     
 </body>
 </html>
